[tool.poetry]
name = "ctransformers"
version = "1.0.0"
description = "ctransformer library that is compatible with Arm compiler of linux"
authors = ["hgokhru101 <harsh.gokhru@somaiya.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^69.0.2"
scikit-build = "^0.17.6"
cmake = "^3.28.1"
ninja = "^1.11.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
